# new-nu-parser

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  toolkit.nu
.github/workflows/: ci.yml
benches/: benchmarks.rs
benches/nu/: combined.nu  combined10.nu  combined100.nu  combined1000.nu  def.nu  def10.nu  def100.nu  def1000.nu  for.nu  for10.nu  for100.nu  for1000.nu  if10.nu  if100.nu  if1000.nu  if_oneof.nu  if_oneof10.nu  if_oneof100.nu  if_oneof1000.nu  int100.nu  let100.nu  while.nu  while10.nu  while100.nu  while1000.nu
contributing/: typechecking.md
src/: ast_nodes.rs  compiler.rs  errors.rs  ir_generator.rs  lexer.rs  lexer2.rs  lexer3.rs  lib.rs  main.rs  naming.rs  parser.rs  resolver.rs  test.rs  token.rs  typechecker.rs
src/protocol/: command.rs  mod.rs
src/snapshots/: new_nu_parser__test__lexer.snap  new_nu_parser__test__lexer3@bareword.nu.snap  new_nu_parser__test__lexer3@datetime.nu.snap  new_nu_parser__test__lexer3@float.nu.snap  new_nu_parser__test__lexer3@int.nu.snap  new_nu_parser__test__lexer@bareword.nu.snap  (+61 more)
tests/: alias.nu  binary_ops.nu  binary_ops_exact.nu  binary_ops_mismatch.nu  binary_ops_spaces.nu  binary_ops_subtypes.nu  calls.nu  calls_invalid.nu  closure3.nu  def.nu  def_generics.nu  def_plus.nu  def_return_type.nu  def_return_types.nu  def_with_flags.nu  extern.nu  for.nu  if_.nu  infer_complex.nu  infer_generics.nu  infer_plus.nu  invalid_if.nu  invalid_types.nu  let_.nu  let_mismatch.nu  match.nu  mut_.nu  path.nu  pipeline.nu  reparse.nu  string.nu  try.nu  variable_names.nu  while.nu
(+9 files in other folders)
