[package]
name = "new-nu-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracy-client = { version = "0.17.3", default-features = false } # for tracy v0.11.1
logos = "0.15"

[profile.profiling]
inherits = "release"
debug = true

[features]
# By default, profiling is disabled. Enable it by the "profile" feature
tracy = [
    "tracy-client/enable",
    "tracy-client/flush-on-exit",
    "tracy-client/sampling",
    "tracy-client/code-transfer",
]

[lib]
name = "new_nu_parser"
path = "src/lib.rs"

[dev-dependencies]
insta = { version = "1.33.0", features = ["glob"] }
tango-bench = "0.6"
nu-parser = "0.101"
nu-protocol = "0.101"
nu-cmd-lang = "0.101"

[[bench]]
name = "benchmarks"
harness = false
